Fix spacing on talk links

--- a/.output/media/css/dcreager.css
+++ b/.output/media/css/dcreager.css
@@ -356,7 +356,7 @@ li.reference ul.details li.date:before {
 }
 
 li.reference ul.details span.glyphicon {
-    margin-right: 3px;
+    margin-right: 0.5em;
 }
 
 li.reference div.citation {
